edits exceptions and test method